--- a/app/globals.css
+++ b/app/globals.css
@@ -112,31 +112,6 @@ html, body {
 }
 img, svg { display: block; max-width: 100%; height: auto; }
 
-/* BannerScroller animation */
-.banner-scroll-wrapper {
-	position: relative;
-	width: 100vw;
-	overflow: hidden;
-	background-color: #222;
-	height: 40px;
-}
-.banner-scroll-content {
-	color: #fff;
-	display: inline-block;
-	white-space: nowrap;
-	min-width: 200vw;
-	animation: banner-scroll 30s linear infinite;
-}
-
-@keyframes banner-scroll {
-	0% {
-		transform: translateX(0);
-	}
-	50% {
-		transform: translateX(-50vw);
-	}
-}
-
 button {
 	font-family: inherit;
 	border-radius: 0.5em;
@@ -210,4 +185,40 @@ main {
   flex-direction: space-between;
   gap: 1rem;
   margin-top: 1rem;
+}
+
+
+/* BannerScroller animation */
+.banner-scroll-wrapper {
+	position: relative;
+	width: 100%;
+	overflow: hidden;
+	background-color: #222;
+	height: 40px;
+	text-align: center;
+	padding: 16px;
+}
+.banner-scroll-content {
+		color: #fff;
+		display: inline-block;
+		white-space: nowrap;
+		min-width: 100vw;
+		animation: banner-scroll 30s linear infinite;
+}
+
+@keyframes banner-scroll {
+		0% {
+			transform: translateX(100vw);
+		}
+		100% {
+			transform: translateX(-100vw);
+		}
+}
+
+.banner-title{
+	color: #fff;
+	/* text-shadow: 0 2px 8px rgba(0,0,0,0.8);
+	 */
+	 width: 50%;
+	 margin: 10%;
 }
